--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -21,19 +21,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
 
   <!-- Libraries Stylesheet -->
-  <link href="lib/animate/animate.min.css" rel="stylesheet" />
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+  <link href="./lib/animate/animate.min.css" rel="stylesheet" />
+  <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./css/bootstrap.min.css" rel="stylesheet" />
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css2/style.css">
-  <link rel="stylesheet" href="scss/follower.scss">
-  <link rel="stylesheet" href="scss/bootstrap/scss/_carousel.scss">
-  <link rel="stylesheet" href="check.css">
+  <link href="./css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css2/style.css">
+  <link rel="stylesheet" href="./scss/follower.scss">
+  <link rel="stylesheet" href="./scss/bootstrap/scss/_carousel.scss">
+  <link rel="stylesheet" href="./check.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <style>
@@ -248,8 +248,7 @@
     </div>
   </div>
   <!-- Topbar End -->
-
-
+  
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="./index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -260,44 +259,38 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
-
-
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="./index.html" class="nav-item nav-link active">Home</a>
-            <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
-            <div class="dropdown">
-              <a href="./testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
-              <div class="dropdown-menu">
-                <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-                <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-                <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
-              </div>
-            </div>
-            <a href="./blog/homepageblog.html" class="nav-item nav-link">blog</a>
-          </div>
-          <div class="button-container">
-            <button class="button-enquiry" onclick="redirectEnquiry()">
-              <svg id="svgContainer" fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 56" version="1.1"
-                xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="start">
-                  <path id="plane"
-                    d="M 54.4141 28 C 54.3906 25.2578 50.6639 23.2656 46.1874 23.2656 L 36.7421 23.2656 C 35.4296 23.2656 34.9374 23.0547 34.1640 22.1641 L 18.4140 4.9844 C 17.9218 4.4219 17.3124 4.1406 16.6093 4.1406 L 13.8905 4.1406 C 13.2812 4.1406 12.9296 4.6797 13.2343 5.3359 L 21.3437 23.2656 L 9.4374 24.6250 L 5.1952 16.8437 C 4.8905 16.2578 4.3749 16 3.6015 16 L 2.5937 16 C 1.9843 16 1.5859 16.3984 1.5859 17.0078 L 1.5859 38.9922 C 1.5859 39.6016 1.9843 39.9766 2.5937 39.9766 L 3.6015 39.9766 C 4.3749 39.9766 4.8905 39.7188 5.1952 39.1563 L 9.4374 31.3750 L 21.3437 32.7344 L 13.2343 50.6641 C 12.9296 51.2968 13.2812 51.8594 13.8905 51.8594 L 16.6093 51.8594 C 17.3124 51.8594 17.9218 51.5547 18.4140 51.0156 L 34.1640 33.8125 C 34.9374 32.9453 35.4296 32.7344 36.7421 32.7344 L 46.1874 32.7344 C 50.6639 32.7344 54.3906 30.7188 54.4141 28 Z" />
-                </g>
-              </svg>
-              <span id="enquiryText">ENQUIRY</span>
-            </button>
+        <a href="./index.html" class="nav-item nav-link active">Home</a>
+        <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+        <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
+        <div class="dropdown">
+          <a href="./testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
+          <div class="dropdown-menu">
+            <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
+            <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
+            <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
+            <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
           </div>
         </div>
+        <a href="./blog/homepageblog.html" class="nav-item nav-link ">blog</a>
+      </div>
+      <div class="button-container">
+        <button class="button-enquiry" onclick="redirectEnquiry()">
+          <svg id="svgContainer" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 56"
+            version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g id="start">
+              <path
+                d="M 54.4141 28 C 54.3906 25.2578 50.6639 23.2656 46.1874 23.2656 L 36.7421 23.2656 C 35.4296 23.2656 34.9374 23.0547 34.1640 22.1641 L 18.4140 4.9844 C 17.9218 4.4219 17.3124 4.1406 16.6093 4.1406 L 13.8905 4.1406 C 13.2812 4.1406 12.9296 4.6797 13.2343 5.3359 L 21.3437 23.2656 L 9.4374 24.6250 L 5.1952 16.8437 C 4.8905 16.2578 4.3749 16 3.6015 16 L 2.5937 16 C 1.9843 16 1.5859 16.3984 1.5859 17.0078 L 1.5859 38.9922 C 1.5859 39.6016 1.9843 39.9766 2.5937 39.9766 L 3.6015 39.9766 C 4.3749 39.9766 4.8905 39.7188 5.1952 39.1563 L 9.4374 31.3750 L 21.3437 32.7344 L 13.2343 50.6641 C 12.9296 51.2968 13.2812 51.8594 13.8905 51.8594 L 16.6093 51.8594 C 17.3124 51.8594 17.9218 51.5547 18.4140 51.0156 L 34.1640 33.8125 C 34.9374 32.9453 35.4296 32.7344 36.7421 32.7344 L 46.1874 32.7344 C 50.6639 32.7344 54.3906 30.7188 54.4141 28 Z" />
+            </g>
+          </svg>
+          <span id="enquiryText">ENQUIRY</span>
+        </button>
+      </div>
+    </div>
   </nav>
   <!-- Navbar End -->
 
 
-  <!-- 
-        - #HERO
-      -->
+  <!--- #HERO --->
   <section class="section hero" id="home" aria-label="hero">
     <div class="container bottom-height" style=" padding-right: 0px;">
 
