--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -75,38 +75,33 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-
-
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto p-4 p-lg-0">
-                        <a href="../index.html" class="nav-item nav-link ">Home</a>
-                        <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-                        <a href="../testComponents/flying.html" class="nav-item nav-link active">Flying</a>
-                        <div class="dropdown">
-                            <a href="../testComponents/clasess.html"
-                                class="nav-item nav-link nav-dropdown ">Classes</a>
-                            <div class="dropdown-menu">
-                                <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
-                                <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
-                                <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
-                            </div>
-                        </div>
-                        <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
-                    </div>
-                    <div class="button-container">
-                        <button class="button-enquiry" onclick="redirectEnquiry()">
-                            <svg id="svgContainer" fill="white" xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 56 56" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <g id="start">
-                                    <path id="plane"
-                                        d="M 54.4141 28 C 54.3906 25.2578 50.6639 23.2656 46.1874 23.2656 L 36.7421 23.2656 C 35.4296 23.2656 34.9374 23.0547 34.1640 22.1641 L 18.4140 4.9844 C 17.9218 4.4219 17.3124 4.1406 16.6093 4.1406 L 13.8905 4.1406 C 13.2812 4.1406 12.9296 4.6797 13.2343 5.3359 L 21.3437 23.2656 L 9.4374 24.6250 L 5.1952 16.8437 C 4.8905 16.2578 4.3749 16 3.6015 16 L 2.5937 16 C 1.9843 16 1.5859 16.3984 1.5859 17.0078 L 1.5859 38.9922 C 1.5859 39.6016 1.9843 39.9766 2.5937 39.9766 L 3.6015 39.9766 C 4.3749 39.9766 4.8905 39.7188 5.1952 39.1563 L 9.4374 31.3750 L 21.3437 32.7344 L 13.2343 50.6641 C 12.9296 51.2968 13.2812 51.8594 13.8905 51.8594 L 16.6093 51.8594 C 17.3124 51.8594 17.9218 51.5547 18.4140 51.0156 L 34.1640 33.8125 C 34.9374 32.9453 35.4296 32.7344 36.7421 32.7344 L 46.1874 32.7344 C 50.6639 32.7344 54.3906 30.7188 54.4141 28 Z" />
-                                </g>
-                            </svg>
-                            <span id="enquiryText">ENQUIRY</span>
-                        </button>
+                <a href="../index.html" class="nav-item nav-link ">Home</a>
+                <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+                <a href="../testComponents/flying.html" class="nav-item nav-link active">Flying</a>
+                <div class="dropdown">
+                    <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+                    <div class="dropdown-menu">
+                        <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
+                        <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
+                        <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
+                        <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                     </div>
                 </div>
+                <a href="../blog/homepageblog.html" class="nav-item nav-link">blog</a>
+            </div>
+            <div class="button-container">
+                <button class="button-enquiry" onclick="redirectEnquiry()">
+                    <svg id="svgContainer" fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 56"
+                        version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="start">
+                            <path id="plane"
+                                d="M 54.4141 28 C 54.3906 25.2578 50.6639 23.2656 46.1874 23.2656 L 36.7421 23.2656 C 35.4296 23.2656 34.9374 23.0547 34.1640 22.1641 L 18.4140 4.9844 C 17.9218 4.4219 17.3124 4.1406 16.6093 4.1406 L 13.8905 4.1406 C 13.2812 4.1406 12.9296 4.6797 13.2343 5.3359 L 21.3437 23.2656 L 9.4374 24.6250 L 5.1952 16.8437 C 4.8905 16.2578 4.3749 16 3.6015 16 L 2.5937 16 C 1.9843 16 1.5859 16.3984 1.5859 17.0078 L 1.5859 38.9922 C 1.5859 39.6016 1.9843 39.9766 2.5937 39.9766 L 3.6015 39.9766 C 4.3749 39.9766 4.8905 39.7188 5.1952 39.1563 L 9.4374 31.3750 L 21.3437 32.7344 L 13.2343 50.6641 C 12.9296 51.2968 13.2812 51.8594 13.8905 51.8594 L 16.6093 51.8594 C 17.3124 51.8594 17.9218 51.5547 18.4140 51.0156 L 34.1640 33.8125 C 34.9374 32.9453 35.4296 32.7344 36.7421 32.7344 L 46.1874 32.7344 C 50.6639 32.7344 54.3906 30.7188 54.4141 28 Z" />
+                        </g>
+                    </svg>
+                    <span id="enquiryText">ENQUIRY</span>
+                </button>
+            </div>
+        </div>
     </nav>
     <!-- Navbar End -->
 
@@ -776,7 +771,7 @@
 
 
         <div class="india">
-            <div  data-wow-delay="0.1s">
+            <div data-wow-delay="0.1s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">
@@ -838,7 +833,7 @@
             </div>
         </div>
         <div class="south-africa">
-            <div  data-wow-delay="0.3s">
+            <div data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">SACAA CPL Training in South Africa</h5>
@@ -870,7 +865,7 @@
             </div>
         </div>
         <div class="morocco">
-            <div  data-wow-delay="0.1s">
+            <div data-wow-delay="0.1s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">
@@ -901,7 +896,7 @@
             </div>
         </div>
         <div class="argentina">
-            <div  data-wow-delay="0.3s">
+            <div data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">ANAC CPL Training in Argentina</h5>
@@ -934,53 +929,55 @@
         </div>
         <div class="tunisia">
             <div class="d-flex gap-3">
-            <div  data-wow-delay="0.3s">
-                <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
-                    <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">OACA CPL Training in Tunisia</h5>
-                        <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
-                        <ol class="breadcrumb justify-content-space-between mb-0">
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-signal text-primary me-2"></i>Beginner
-                            </li>
-                            <li>
-                                <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to learn more
-                            </li>
-                        </ol>
+                <div data-wow-delay="0.3s">
+                    <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
+                        <div class="text-center p-4">
+                            <h5 class="mb-3 mt-2 mt-xl-1">OACA CPL Training in Tunisia</h5>
+                            <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
+                            <ol class="breadcrumb justify-content-space-between mb-0">
+                                <li class="breadcrumb-item small">
+                                    <i class="fa fa-signal text-primary me-2"></i>Beginner
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to
+                                    learn more
+                                </li>
+                            </ol>
+                        </div>
+                        <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                            <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
+                            <div class="courses-overlay">
+                                <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                    href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                        <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
-                        <div class="courses-overlay">
-                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                </div>
+                <div data-wow-delay="0.3s">
+                    <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
+                        <div class="text-center p-4 ">
+                            <h5 class="mb-3 mt-2 mt-xl-1">A320 CPL Training in Tunisia</h5>
+                            <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
+                            <ol class="breadcrumb d-flex justify-content-space-between mb-0">
+                                <li class="breadcrumb-item small">
+                                    <i class="fa fa-signal text-primary me-2"></i>Beginner
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to
+                                    learn more
+                                </li>
+                            </ol>
+                        </div>
+                        <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                            <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
+                            <div class="courses-overlay">
+                                <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                    href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div  data-wow-delay="0.3s">
-                <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
-                    <div class="text-center p-4 ">
-                        <h5 class="mb-3 mt-2 mt-xl-1">A320 CPL Training in Tunisia</h5>
-                        <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
-                        <ol class="breadcrumb d-flex justify-content-space-between mb-0" >
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-signal text-primary me-2"></i>Beginner
-                            </li>
-                            <li>
-                                <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to learn more
-                            </li>
-                        </ol>
-                    </div>
-                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                        <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
-                        <div class="courses-overlay">
-                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cpltunisia.html">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </div>
 
@@ -1033,9 +1030,6 @@
     </div>
 
 
-    </div>
-
-
     <!-- cource end  -->
 
     <!-- demo-class start -->
@@ -1078,7 +1072,6 @@
                             sizes="(max-width: 799px) 100vw, 799px" />
 
 
-                        </a>
                     </div>
                 </div>
             </div>
